dhall/tests/type-inference/failure/unit/RecordSelectionNotRecord.txt
Type error: error: NotARecord
 --> <current file>:1:1
  |
1 | True.x
  | ^^^^^^ NotARecord
  |
